Bug 594233 - speed up js::DefaultValue on Number builtin with void hint (r=lw)

--HG--
extra : rebase_source : e06f43fe67eef83dd7c6d56417be8395184d40dd